--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&display=swap');
   </style>
   <meta charset="utf-8">
-  <title>Ksweb</title>
+  <title>Klaudia Szumacher portfolio</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo.svg">
 </head>
 <body>
   <app-root></app-root>
